--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2018"
 
 [dependencies]
 crossbeam = "0.7"
-argparse = "0.2.2"
+clap = "2.33.0"
 ring = "0.16.11"
 data-encoding = "2.2.0"
 rand = "0.7.3"
-pbr = "1.0.2"
+indicatif = "0.14.0"
